--- a/search_box.html
+++ b/search_box.html
@@ -1,22 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    /* Add your CSS here to style the popup */
+  <style id="themeStyle">
+    :root {
+      --background-color: #fff;
+      --text-color: #000;
+      --input-background: #fff;
+      --input-color: #000;
+    }
     body {
       font-family: Arial, sans-serif;
       margin: 10px;
+      background-color: var(--background-color);
+      color: var(--text-color);
     }
     #searchBox {
-      width: 200px;
+      width: 300px;
       height: 25px;
+      padding: 5px;
+      border: none;
+      border-radius: 5px;
+      background-color: var(--input-background);
+      color: var(--input-color);
+      box-shadow: 0 0 15px 4px rgba(0,0,0,0.06);
+    }
+    #searchLabel {
+      font-size: 1.2em;
+      margin-bottom: 5px;
+      display: block;
+    }
+    .toggle-switch {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 60px;
+      height: 34px;
+    }
+    .toggle-switch input { 
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: .4s;
+    }
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+    input:checked + .slider:before {
+      transform: translateX(26px);
+    }
+    .slider.round {
+      border-radius: 34px;
+    }
+    .slider.round:before {
+      border-radius: 50%;
     }
   </style>
 </head>
 <body>
+  <label class="toggle-switch">
+    <input type="checkbox" id="themeToggle">
+    <span class="slider round"></span>
+  </label>
+  <label id="searchLabel" for="searchBox">Tab Search:</label>
   <input type="text" id="searchBox" placeholder="Search...">
   <button id="searchButton">Search</button>
   <div id="results"></div>
-  <script src="popup.js"></script>
+  <script src="search_box.js"></script>
 </body>
 </html>
