--- a/options.html
+++ b/options.html
@@ -2,17 +2,19 @@
 
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
 
-<body>
-  <form>
+  <body>
+    <form>
       <label for="shortcut">Keyboard shortcut</label>
-      <input type="text" id="shortcut">
+      <input type="text" id="shortcut" />
       <button id="update">Update keyboard shortcut</button>
-      <button id="reset">Reset  keyboard shortcut</button>
-  </form>
-  <script src="options.js"></script>
-</body>
-
+      <button id="reset">Reset keyboard shortcut</button>
+      <br />
+      <label for="themeToggle">Dark Mode</label>
+      <input type="checkbox" id="themeToggle" />
+    </form>
+    <script src="options.js"></script>
+  </body>
 </html>
