starting to add the tab search functionality

--- a/options.html
+++ b/options.html
@@ -13,7 +13,7 @@
       <button id="reset">Reset keyboard shortcut</button>
       <br />
       <label for="themeToggle">Dark Mode</label>
-      <input type="checkbox" id="themeToggle" />
+      <input type="checkbox" id="themeToggle" checked="true" />
     </form>
     <script src="options.js"></script>
   </body>
